fix: fix breadcrumbs wrap

--- a/src/components/breadcrumbs/breadcrumbs.scss
+++ b/src/components/breadcrumbs/breadcrumbs.scss
@@ -10,10 +10,12 @@
     display: flex;
     align-items: center;
     gap: 6px;
+    flex-wrap: wrap;
   }
 
   &__current {
     font: $font-xs;
     color: $color-primary;
+    white-space: nowrap;
   }
 }
